--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "astro": "^5.6.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "vite": "^6.2.6"
+  },
+  "devDependencies": {
+    "@astrojs/tailwind": "^6.0.2",
     "tailwindcss": "^4.1.3"
   }
 }
